--- a/sticky-navbar/index.html
+++ b/sticky-navbar/index.html
@@ -16,6 +16,11 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+            <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
     <div class="top-container">
       <h1>Welcome to our website</h1>
